--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,11 +1,79 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | asadmukhtar.store</title>
-</head>
-<body>
-    <h2>Login</h2>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  </head>
+  <body>
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="card">
+                    <div class="card-header bg-danger">
+                        <input type="text" class="form-control" id="calculate">
+                    </div>
+                    <div>
+                        <table class="table table-bordered table-striped table-hover">
+                            <tr>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="0">0</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="1">1</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="2">2</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="3">3</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-warning btn-sm" onclick="getValue(this.value)" value="+">+</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="4">4</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="5">5</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="6">6</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="7">7</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-info btn-sm" value="-" onclick="getValue(this.value)">-</button>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="8">8</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getValue(this.value)" value="9">9</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="getResult()" value="=">=</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-danger btn-sm" onclick="clearInp()" value="c">c</button>
+                                </td>
+                                <td>
+                                    <button class="btn btn-warning btn-sm" value="*" onclick="getValue(this.value)">*</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  </body>
 </html>
