--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,7 +6,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body>
+  <body onload="defualt_currency_select()">
     <div class="container mt-4">
         <div class="row">
             <div class="col-lg-3">
@@ -70,6 +70,35 @@
                         </table>
                     </div>
                 </div>
+            </div>
+             <div class="col-lg-6">
+                <table class="table table-bordered table-bordered table-hover">
+                    <tr class="bg-danger text-white">
+                        <th>
+                            <input type="text" class="form-control" id="pkr_value" disabled>
+                        </th>
+                        <th>
+                            Pakistani Rupee (PKR)
+                        </th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" id="amount" value="1" class="form-control">
+                        </td>
+                        <td>
+                            <select name="" id="currency" onchange="change_currency(this.value)" class="form-control">
+                                <option value="289">USD</option>
+                                <option value="75.73">AED</option>
+                                <option value="38.15">Yuan</option>
+                                <option value="74.02">Riyal</option>
+                                <option value="291.64" selected>Euro</option>
+                                <option value="1.83">Yen</option>
+                                <option value="196.55">CAD</option>
+                                <option value="904.26">Kuwait Dinnar</option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
