--- a/frontend/register.html
+++ b/frontend/register.html
@@ -3,9 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register | asadmukhtar.store</title>
+    <title>To-Do List</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1 {
+            text-align: center;
+        }
+        #todo-input {
+            width: 80%;
+            padding: 10px;
+        }
+        #add-button {
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            margin-bottom: 5px;
+            background-color: #f4f4f4;
+            border-radius: 5px;
+        }
+        li.completed {
+            text-decoration: line-through;
+            color: grey;
+        }
+        .delete-button {
+            background-color: red;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+    </style>
 </head>
 <body>
-    <h2>Register</h2>
+    <h1>To-Do List</h1>
+    <input type="text" id="todo-input" placeholder="Add a new task">
+    <button id="add-button">Add</button>
+    <ul id="todo-list"></ul>
+
+<script>
+    // Get references to elements
+const todoInput = document.getElementById('todo-input');
+const addButton = document.getElementById('add-button');
+const todoList = document.getElementById('todo-list');
+
+// Add task to the list
+addButton.addEventListener('click', () => {
+    const taskText = todoInput.value.trim();
+    if (taskText === '') {
+        alert('Please enter a task!');
+        return;
+    }
+
+    // Create a new task item
+    const listItem = document.createElement('li');
+
+    // Add task text
+    listItem.textContent = taskText;
+
+    // Add delete button
+    const deleteButton = document.createElement('button');
+    deleteButton.textContent = 'Delete';
+    deleteButton.className = 'delete-button';
+    deleteButton.addEventListener('click', () => {
+        todoList.removeChild(listItem);
+    });
+
+    // Toggle completed state
+    listItem.addEventListener('click', () => {
+        listItem.classList.toggle('completed');
+    });
+
+    // Append delete button and task item to the list
+    listItem.appendChild(deleteButton);
+    todoList.appendChild(listItem);
+
+    // Clear input
+    todoInput.value = '';
+});
+
+</script>
 </body>
 </html>
